--- a/.github/workflows/pr-checklist-verification.yml
+++ b/.github/workflows/pr-checklist-verification.yml
@@ -53,10 +53,12 @@ jobs:
       - name: Get label-based checklist comment
         id: label-checklist
         uses: actions/github-script@v7
+        env:
+          PR_DATA: ${{ steps.pr.outputs.result }}
         with:
           result-encoding: string
           script: |
-            const prData = JSON.parse(`${{ steps.pr.outputs.result }}`);
+            const prData = JSON.parse(process.env.PR_DATA);
             // Find label-based checklist comment
             const { data: comments } = await github.rest.issues.listComments({
               owner: context.repo.owner,
@@ -74,13 +76,16 @@ jobs:
       - name: Verify checklist items
         id: verify
         uses: actions/github-script@v7
+        env:
+          PR_DATA: ${{ steps.pr.outputs.result }}
+          LABEL_CHECKLIST: ${{ steps.label-checklist.outputs.result }}
         with:
           result-encoding: string
           script: |
-            const prData = JSON.parse(`${{ steps.pr.outputs.result }}`);
+            const prData = JSON.parse(process.env.PR_DATA);
             const body = prData.body;
             const labels = prData.labels;
-            const labelChecklistBody = `${{ steps.label-checklist.outputs.result }}`;
+            const labelChecklistBody = process.env.LABEL_CHECKLIST;
 
             // Combine PR body and label checklist for verification
             const combinedBody = body + '\n\n' + labelChecklistBody;
@@ -131,9 +136,11 @@ jobs:
 
       - name: Report status
         uses: actions/github-script@v7
+        env:
+          VERIFY_RESULT: ${{ steps.verify.outputs.result }}
         with:
           script: |
-            const result = JSON.parse(`${{ steps.verify.outputs.result }}`);
+            const result = JSON.parse(process.env.VERIFY_RESULT);
             const status = '${{ steps.verify.outputs.status }}';
             const message = `${{ steps.verify.outputs.message }}`;
 
