--- a/.github/workflows/label-based-checklist.yml
+++ b/.github/workflows/label-based-checklist.yml
@@ -49,16 +49,16 @@ jobs:
             for (const label of labels) {
               if (labelDefinitions[label]) {
                 const def = labelDefinitions[label];
-                const items = def.items.map(item => `- [ ] ${item}`).join('\n            ');
+                const items = def.items.map(item => `- [ ] ${item}`).join('\n');
 
                 checklists.push(`
-            ## ${def.title}
+## ${def.title}
 
-            ${def.description}
+${def.description}
 
-            ${items}
+${items}
 
-            ${def.footer || ''}
+${def.footer || ''}
                 `.trim());
               }
             }
@@ -67,39 +67,35 @@ jobs:
             let comment = '';
 
             if (checklists.length === 0) {
-              comment = `
-            ## 🏷️ Label-Based Checklist
+              comment = `## 🏷️ Label-Based Checklist
 
-            **No specific label requirements detected.**
+**No specific label requirements detected.**
 
-            Current labels: ${labels.length > 0 ? labels.map(l => `\`${l}\``).join(', ') : '_No labels_'}
+Current labels: ${labels.length > 0 ? labels.map(l => `\`${l}\``).join(', ') : '_No labels_'}
 
-            Add labels to this PR (bug, enhancement, security, etc.) to see relevant checklist items here.
+Add labels to this PR (bug, enhancement, security, etc.) to see relevant checklist items here.
 
-            ---
-            *This comment updates automatically when labels change.*
-            `;
+---
+*This comment updates automatically when labels change.*`;
             } else {
-              comment = `
-            ## 🏷️ Label-Based Checklist
+              comment = `## 🏷️ Label-Based Checklist
 
-            Based on the labels applied to this PR, please complete these additional requirements:
+Based on the labels applied to this PR, please complete these additional requirements:
 
-            **Labels:** ${labels.map(l => `\`${l}\``).join(', ')}
+**Labels:** ${labels.map(l => `\`${l}\``).join(', ')}
 
-            ---
+---
 
-            ${checklists.join('\n---\n')}
+${checklists.join('\n\n---\n\n')}
 
-            ---
+---
 
-            **Instructions:**
-            1. Check off items as you complete them (change \`- [ ]\` to \`- [x]\`)
-            2. Edit this comment to update checkboxes
-            3. The PR checklist CI will verify these are completed
+**Instructions:**
+1. Check off items as you complete them (change \`- [ ]\` to \`- [x]\`)
+2. Edit this comment to update checkboxes
+3. The PR checklist CI will verify these are completed
 
-            *This comment updates automatically when labels change.*
-            `;
+*This comment updates automatically when labels change.*`;
             }
 
             return JSON.stringify({ comment, labelCount: labels.length, checklistCount: checklists.length });
